[gd_scene load_steps=9 format=2]

[ext_resource path="res://resources/runtime_data.tres" type="Resource" id=1]
[ext_resource path="res://player/Healthbar/healthbar.tscn" type="PackedScene" id=2]
[ext_resource path="res://Enemy/timers/enemy_type_timers.tscn" type="PackedScene" id=3]
[ext_resource path="res://coding_art_assets/hit_animations.gd" type="Script" id=4]
[ext_resource path="res://player/player_one_art_audio.gd" type="Script" id=5]
[ext_resource path="res://scripts/gamestarttimer.gd" type="Script" id=6]
[ext_resource path="res://player/player_one.gd" type="Script" id=7]

[sub_resource type="AudioStreamRandomPitch" id=1]
random_pitch = 4.1

[node name="PlayerOne" type="Spatial"]
script = ExtResource( 7 )
runtime_data = ExtResource( 1 )

[node name="GameReadyTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true
script = ExtResource( 6 )
runtime_data = ExtResource( 1 )
countdown_to_start = 1

[node name="AudioController" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 199.109, 0 )
script = ExtResource( 5 )

[node name="PlayerOneAttack" type="AudioStreamPlayer" parent="AudioController"]
stream = SubResource( 1 )
volume_db = -6.933

[node name="PlayerOneHurt" type="AudioStreamPlayer" parent="AudioController"]
stream = SubResource( 1 )

[node name="PlayerOneStartEnd" type="AudioStreamPlayer" parent="AudioController"]

[node name="EnemyContainer" type="Spatial" parent="."]

[node name="TextTimerController" parent="." instance=ExtResource( 3 )]

[node name="HitAnimations" type="Node2D" parent="."]
position = Vector2( 652, 317 )
script = ExtResource( 4 )

[node name="Hit_Effects_Right" type="Node2D" parent="HitAnimations"]

[node name="Hit_Marker_1" type="Position2D" parent="HitAnimations/Hit_Effects_Right"]
position = Vector2( 48, -73 )

[node name="Hit_Marker_2" type="Position2D" parent="HitAnimations/Hit_Effects_Right"]
position = Vector2( 77, -45 )

[node name="Hit_Marker_3" type="Position2D" parent="HitAnimations/Hit_Effects_Right"]
position = Vector2( 90, -3 )

[node name="Hit_Marker_4" type="Position2D" parent="HitAnimations/Hit_Effects_Right"]
position = Vector2( 95, 47 )

[node name="Hit_Marker_5" type="Position2D" parent="HitAnimations/Hit_Effects_Right"]
position = Vector2( 66, 80 )

[node name="Hit_Marker_6" type="Position2D" parent="HitAnimations/Hit_Effects_Right"]
position = Vector2( 21, 114 )

[node name="Hit_Marker_7" type="Position2D" parent="HitAnimations/Hit_Effects_Right"]
position = Vector2( 12, -48 )

[node name="Hit_Marker_8" type="Position2D" parent="HitAnimations/Hit_Effects_Right"]
position = Vector2( 38, -11 )

[node name="Hit_Marker_9" type="Position2D" parent="HitAnimations/Hit_Effects_Right"]
position = Vector2( 18, 41 )

[node name="Hit_Effects_Left" type="Node2D" parent="HitAnimations"]

[node name="Hit_Marker_1" type="Position2D" parent="HitAnimations/Hit_Effects_Left"]
position = Vector2( -49, -73 )
rotation = 3.14159
scale = Vector2( 1, -1 )

[node name="Hit_Marker_2" type="Position2D" parent="HitAnimations/Hit_Effects_Left"]
position = Vector2( -77, -45 )
rotation = 3.14159
scale = Vector2( 1, -1 )

[node name="Hit_Marker_3" type="Position2D" parent="HitAnimations/Hit_Effects_Left"]
position = Vector2( -90, -3 )
rotation = 3.14159
scale = Vector2( 1, -1 )

[node name="Hit_Marker_4" type="Position2D" parent="HitAnimations/Hit_Effects_Left"]
position = Vector2( -95, 47 )
rotation = 3.14159
scale = Vector2( 1, -1 )

[node name="Hit_Marker_5" type="Position2D" parent="HitAnimations/Hit_Effects_Left"]
position = Vector2( -66, 80 )
rotation = 3.14159
scale = Vector2( 1, -1 )

[node name="Hit_Marker_6" type="Position2D" parent="HitAnimations/Hit_Effects_Left"]
position = Vector2( -21, 114 )
rotation = 3.14159
scale = Vector2( 1, -1 )

[node name="Hit_Marker_7" type="Position2D" parent="HitAnimations/Hit_Effects_Left"]
position = Vector2( -12, -48 )
rotation = 3.14159
scale = Vector2( 1, -1 )

[node name="Hit_Marker_8" type="Position2D" parent="HitAnimations/Hit_Effects_Left"]
position = Vector2( -38, -11 )
rotation = 3.14159
scale = Vector2( 1, -1 )

[node name="Hit_Marker_9" type="Position2D" parent="HitAnimations/Hit_Effects_Left"]
position = Vector2( -18, 41 )
rotation = 3.14159
scale = Vector2( 1, -1 )

[node name="HealthBar" parent="." instance=ExtResource( 2 )]

[connection signal="timeout" from="GameReadyTimer" to="." method="_on_GameReadyTimer_timeout"]
